syntax = "proto3";

option go_package = "shared/protobuf";

service ProfileService {
  rpc GetProfileByID (GetProfileRequest) returns (GetProfileResponse);
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
}

message GetProfileRequest {
  string id = 1;
}

message GetProfileResponse {
  Profile profile = 1;
}

message CreateProfileRequest {
  string first_name = 1;
  string last_name = 2;
  string image_url = 3;
}

message CreateProfileResponse {
  Profile profile = 1;
}

message Profile {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string image_url = 4;
  string created_at = 5;
  string updated_at = 6;
}